--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
 
-    <div class="card">
+    <main class="card">
       <img src="./images/image-qr-code.png" alt="Qr Code">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
@@ -45,6 +45,6 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Luis Bernal</a>.
-    </div>
+    </main>
   </body>
 </html>
